--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,9 +6,9 @@
     android:id="@+id/main_parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.myapplication.MainActivity">
+    tools:context="com.example.myapplication.MainActivity"
+    android:background="@color/light_grey">
 
-    <!-- Card View for the user's search text and search button -->
     <androidx.cardview.widget.CardView
         android:id="@+id/card_view"
         android:layout_width="@dimen/search_bar_width"
@@ -16,12 +16,10 @@
         android:layout_centerInParent="true"
         app:cardUseCompatPadding="true">
 
-        <!-- Horizontal LinearLayout container for the text and the button -->
         <LinearLayout
             android:layout_width="@dimen/search_bar_width"
             android:layout_height="match_parent">
 
-            <!-- Editable TextView for the user's search criteria -->
             <EditText
                 android:id="@+id/user_input_edit_text_view"
                 android:layout_width="@dimen/search_editable_text_width"
@@ -33,7 +31,6 @@
                 android:maxLines="1"
                 android:padding="@dimen/min_dimension"/>
 
-            <!-- Button for the user to get the results for their search -->
             <ImageButton
                 android:id="@+id/search_button"
                 android:layout_width="@dimen/search_button_width"
@@ -48,21 +45,21 @@
 
     </androidx.cardview.widget.CardView>
 
-    <!-- TextView for the title of the search interface -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/card_view"
         android:gravity="center"
         android:paddingBottom="@dimen/title_bottom_padding"
-        android:text="@string/title_text"
+        android:text="@string/search_a_book"
         android:textAppearance="?android:textAppearanceLarge"
-        android:textColor="@android:color/holo_green_dark"
-        android:textSize="@dimen/title_text_size"
+        android:textColor="@color/purple_500"
+        android:textStyle="bold"
+        android:textSize="25sp"
         android:typeface="monospace"/>
 
-    <!-- Checkbox for searching book titles matching search text -->
     <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/card_view"
@@ -76,7 +73,6 @@
             android:layout_marginRight="@dimen/min_dimension"
             android:text="@string/title_radio_text"/>
 
-        <!-- Checkbox for searching book authors matching search text -->
         <RadioButton
             android:id="@+id/author_radio"
             android:layout_width="wrap_content"
@@ -84,7 +80,6 @@
             android:layout_marginRight="@dimen/min_dimension"
             android:text="@string/author_radio_text"/>
 
-        <!-- Checkbox for searching books based on ISBN of the book -->
         <RadioButton
             android:id="@+id/isbn_radio"
             android:layout_width="wrap_content"
@@ -93,5 +88,16 @@
             android:text="@string/isbn_radio_text"/>
 
     </RadioGroup>
+
+    <Button
+        android:id="@+id/uncheck_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/radio_group"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:text="@string/uncheck"
+        android:textAllCaps="false"
+        />
 
 </RelativeLayout>
